Expand entity world and block APIs